commented code add for future application of typewriter in NavBar

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -39,3 +39,10 @@
   font-size: 1.2em;
   margin-bottom: 20px;
 }
+
+/* .typing-text {
+  font-size: 2em;
+  font-weight: bold;
+  color: #1F4172; 
+  margin-bottom: 20px;
+} */
