--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -52,13 +52,13 @@
   z-index: 100;
   opacity: 0;
   transform: translateY(-20px);
-  animation: fadeInUp 1.5s ease-out forwards;
+  animation: fadeInDown 1.5s ease-out forwards;
 }
 
-@keyframes fadeInUp {
+@keyframes fadeInDown {
   from {
     opacity: 0;
-    transform: translateY(100px);
+    transform: translateY(-100px);
   }
   to {
     opacity: 1;
