--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -136,7 +136,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: #1F4172;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -161,7 +161,7 @@
   height: 100%;
   object-fit: cover;
   z-index: 0;
-  opacity: 0.5;  /* Adjust for readability */
+  opacity: .5;  /* Adjust for readability */
 }
 
 /* Modal Inner Content */
