--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -15,7 +15,6 @@
   width: 100%;
 }
 
-/* Contact Button */
 .contact-button {
   border: 2px solid #132043;
   color: #F1B4BB;
@@ -32,7 +31,6 @@
   color: #FDF0F0;
 }
 
-/* Subscribe Section */
 .subscribe-section {
   margin: 30px 0;
 }
@@ -77,7 +75,6 @@
   margin-top: 10px;
 }
 
-/* Social Media Icons */
 .social-icons {
   display: flex;
   gap: 15px;
@@ -94,7 +91,6 @@
   color: #9fdd39; 
 }
 
-/* Footer Branding */
 .footer-brand {
   font-size: clamp(24px, 8vw, 120px); 
   font-weight: bold;
@@ -103,7 +99,6 @@
   justify-content: center;
 }
 
-/* Ensures the link inside .footer-brand keeps the original color */
 .footer-brand a {
   text-decoration: none;
   color: #132043 !important; 
@@ -113,7 +108,6 @@
   color: #9fdd39 !important; 
 }
 
-/* Define keyframes for a wave effect */
 @keyframes wave {
   0% { transform: rotate(0deg); }
   15% { transform: rotate(14deg); }
@@ -124,12 +118,10 @@
   100% { transform: rotate(0deg); }
 }
 
-/* Apply the wave animation when the .wave class is added */
 .wave {
   animation: wave 1s ease-in-out;
 }
 
-/* Modal Overlay */
 .modal-overlay {
   position: fixed;
   top: 0;
@@ -145,7 +137,6 @@
   z-index: 1000;
 }
 
-/* Modal Content Container */
 .modal-content {
   position: relative;
   border-radius: 5px;
@@ -154,7 +145,6 @@
   width: 90%;
 }
 
-/* Background Image Style */
 .modal-bg {
   position: absolute;
   top: 0;
@@ -163,15 +153,14 @@
   height: 100%;
   object-fit: cover;
   z-index: 0;
-  opacity: 1;  /* Adjust for readability */
+  opacity: 1;  
 }
 
-/* Modal Inner Content */
 .modal-inner {
   position: relative;
   z-index: 1;
   padding: 20px 30px;
-  color: #FDF0F0;  /* Ensure text is readable */
+  color: #FDF0F0;  
 }
 
 /* Close Button */
