--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,10 @@ h1, h2, h3, h4, h5, h6 {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+.typewriter {
+  font-family: 'Bebas Neue', sans-serif;
+  font-size: 1.5rem; 
+  letter-spacing: 1px; 
+  text-transform: uppercase; 
+}
