--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,11 +3,10 @@
   top: 20vh; 
   width: 100%;
   text-align: center;
-  z-index: 3; 
+  z-index: 2; 
 }
 
 .typewriter {
-  font-size: 1.5rem;
   font-weight: bold;
   color: #F1B4BB; 
   margin-top: 10px;
@@ -41,6 +40,20 @@
   justify-content: center;
   text-align: center;
   padding: 50px 20px;
+  position: relative;
+  z-index: 3;
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 70%, 0 100%);
+}
+
+.hero-section::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(255,255,255,0) 60%, rgba(255,255,255,1) 100%);
+  z-index: 4;
 }
 
 .container {
