--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -10,11 +10,44 @@
   margin: 0 auto;
 }
 
+.image-badge-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .about-image {
   width: 50%;
   max-width: 400px;
   height: auto;
   border-radius: 10px;
+}
+
+.badges-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 8px;
+  margin-top: 10px;
+  max-width: 400px;
+}
+
+.badge {
+  background: linear-gradient(to right, rgba(253, 240, 240, 0.8), rgba(241, 180, 187, 0.8)); 
+  color: #132043 !important;
+  font-size: 12px;
+  padding: 6px 12px;
+  border-radius: 20px;
+  font-weight: bold;
+  text-align: center;
+  white-space: nowrap;
+  border: 1px solid rgba(241, 180, 187, 0.9); 
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease-in-out;
+}
+
+.badge:hover {
+  transform: scale(1.14); 
 }
 
 .about-content {
@@ -38,6 +71,12 @@
   animation-delay: -1s;
 }
 
+.consult-link {
+  color: #132043;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
 @media (max-width: 768px) {
   .about-container {
       flex-direction: column;
@@ -46,6 +85,15 @@
   
   .about-image {
       max-width: 300px;
+  }
+
+  .badges-container {
+      justify-content: center;
+  }
+
+  .badge {
+      font-size: 10px;
+      padding: 4px 10px;
   }
 
   .about-content {
