--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -78,6 +78,13 @@
   margin-top: 10px;
 }
 
+.error-message {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+
 @keyframes fadeInScale {
   from {
     opacity: 0;
