--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -33,9 +33,10 @@
 }
 
 .logo-container img {
-  width: 300px; 
+  width: 250px; 
   height: auto; 
-  max-width: 100%;
+  max-width: 250px;
+  filter: drop-shadow(2px 2px 6px rgba(0, 0, 0, 0.7));
 }
 
 @media screen and (max-width: 768px) {
