--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -9,6 +9,8 @@
 .typewriter {
   font-size: 2rem;
   font-weight: bold;
+  text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.7);
+
   color: #F1B4BB; 
   margin-top: 10px;
   min-height: 24px; 
@@ -30,8 +32,8 @@
 }
 
 .hero-section {
-  background-image: url('../../../public/AmandaPushuplook.jpg'); 
-  background-size: cover;
+  background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)),
+  url('../../../public/AmandaPushuplook.jpg');  background-size: cover;
   background-position: top-center;
   background-repeat: no-repeat;
   height: 100vh; 
@@ -41,7 +43,7 @@
   text-align: center;
   padding: 50px 20px;
   position: relative;
-  z-index: 3;
+  z-index: 1;
   clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 70%, 0 100%);
 }
 
