--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -33,7 +33,7 @@
 
 .hero-section {
   background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)),
-  url('../../../public/AmandaPushuplook.jpg');  background-size: cover;
+  url('../../../public/AmandaPushuplook.webp');  background-size: cover;
   background-position: top-center;
   background-repeat: no-repeat;
   height: 100vh; 
