--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -11,6 +11,7 @@
   height: auto; 
   box-shadow: none !important;
   border-bottom: none;
+  animation: fadeInDown 1s ease-out;
 }
 
 @keyframes fadeInDown {
