--- a/src/components/LogoBanner/LogoBanner.css
+++ b/src/components/LogoBanner/LogoBanner.css
@@ -1,8 +1,8 @@
-.nav-wrapper {
+.logobanner-wrapper {
   position: fixed;
   background: none; 
   width: 100%;
-  z-index: 2;
+  z-index: 1;
   opacity: 1;
   display: flex;
   flex-direction: column;
