--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -163,7 +163,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('../../../public/DumbellsWallBalls.jpg');
+  background-image: url('../../../public/images/DumbellsWallBalls\ .webp');
   background-size: cover;
   background-position: center;
   display: flex;
