--- a/src/components/LogoBanner/LogoBanner.css
+++ b/src/components/LogoBanner/LogoBanner.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center; 
-  height: auto; 
+  height: 100px; 
   box-shadow: none !important;
   border-bottom: none;
   animation: fadeInDown 1s ease-out;
