color change for contact button text

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -19,7 +19,7 @@
 
 .contact-button {
   border: 2px solid #132043;
-  color: #F1B4BB;
+  color: #1F4172;
   font-weight: bold;
   padding: 10px 30px;
   border-radius: 30px;
