--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,85 @@
+/* === Self-hosted Fonts === */
+
+/* Bebas Neue */
+@font-face {
+  font-family: 'Bebas Neue';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('../public/fonts/BebasNeue/bebas-neue-v14-latin-regular.woff2') format('woff2'),
+ 
+}
+
+/* Roboto */
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url('../public/fonts/Roboto/roboto-v47-latin-300.woff2') format('woff2'),
+}
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('../public/fonts/Roboto/roboto-v47-latin-regular.woff2') format('woff2'),
+}
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url('../public/fonts/Roboto/roboto-v47-latin-700.woff2') format('woff2'),
+}
+
+/* Oswald */
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url('../public/fonts/Oswald/oswald-v53-latin-300.woff2') format('woff2'),
+}
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('../public/fonts/Oswald/oswald-v53-latin-regular.woff2') format('woff2'),
+}
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url('../public/fonts/Oswald/oswald-v53-latin-700.woff2') format('woff2'),
+}
+
+/* Lato */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url('../public/fonts/Lato/lato-v24-latin-300.woff2') format('woff2'),
+}
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('../public/fonts/Lato/lato-v24-latin-regular.woff2') format('woff2'),
+}
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url('../public/fonts/Lato/lato-v24-latin-700.woff2') format('woff2'),
+}
+
+
 /* === Fonts === */
 body {
   font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen',
